--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -1,22 +1,35 @@
-.carousel-wrapper {
-    width: 100%; /* Set the container to occupy the full width of the viewport */
-    height: 100%; /* Set the container to occupy the full height of the viewport */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden; /* Hide any overflow */
-}
+/*.carousel-wrapper {*/
+/*    width: 100%; !* Set the container to occupy the full width of the viewport *!*/
+/*    height: 100%; !* Set the container to occupy the full height of the viewport *!*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    overflow: hidden; !* Hide any overflow *!*/
+/*}*/
 
 .carousel {
-    display: flex;
-    width: 100%; /* Set the width of the carousel to match the container */
-    height: 100%; /* Set the height of the carousel to match the container */
-    transition: transform 0.3s ease-in-out;
-    transform: translateX(-33.33%);
+    /* position: relative; */
+    height: 100%;
+    width: 100%;
+    background-color: black;
 }
 
-.carousel img {
-    width: 100%; /* Make sure images fill the carousel */
-    height: 100%; /* Make sure images fill the carousel */
-    object-fit: cover; /* Ensure the image covers the entire container while maintaining aspect ratio */
+img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    opacity: 0;
+    transition: opacity 1s;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+
+.visible {
+    opacity: 1;
 }
