--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -13,15 +13,13 @@
     width: 100%;
     background-color: black;
 }
-
-img {
+.carousel img {
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     margin: auto;
-    opacity: 0;
     transition: opacity 1s;
     max-width: 100%;
     max-height: 100%;
