--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -9,8 +9,8 @@
 
 .carousel {
     /* position: relative; */
-    height: 100%;
     width: 100%;
+    height: 100vh;
     background-color: black;
 }
 .carousel img {
