--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -7,10 +7,14 @@
 /*    overflow: hidden; !* Hide any overflow *!*/
 /*}*/
 
+.carousel-container {
+    height: 100vh;
+    background-color: black;
+}
 .carousel {
     /* position: relative; */
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: black;
 }
 .carousel img {
