--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -24,6 +24,8 @@
     bottom: 0;
     right: 0;
     margin: auto;
+    opacity: 0;
+    transition: opacity 1s;
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
